--- a/src/styles/icon.less
+++ b/src/styles/icon.less
@@ -1,8 +1,10 @@
 @font-face {
-  font-family: "toutiao";
-  /* Project id 2564888 */
-  src: url('//at.alicdn.com/t/font_2564888_te83g4sxe6j.woff2?t=1621673619220') format('woff2'), url('//at.alicdn.com/t/font_2564888_te83g4sxe6j.woff?t=1621673619220') format('woff'), url('//at.alicdn.com/t/font_2564888_te83g4sxe6j.ttf?t=1621673619220') format('truetype');
+  font-family: "toutiao"; /* Project id 2564888 */
+  src: url('//at.alicdn.com/t/font_2564888_te83g4sxe6j.woff2?t=1621673619220') format('woff2'),
+       url('//at.alicdn.com/t/font_2564888_te83g4sxe6j.woff?t=1621673619220') format('woff'),
+       url('//at.alicdn.com/t/font_2564888_te83g4sxe6j.ttf?t=1621673619220') format('truetype');
 }
+
 .toutiao {
   font-family: "toutiao" !important;
   font-size: 16px;
@@ -10,75 +12,83 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .toutiao-pinglun:before {
   content: "\e614";
 }
+
 .toutiao-guanbi:before {
   content: "\e615";
 }
+
 .toutiao-wode:before {
   content: "\e616";
 }
+
 .toutiao-lishi:before {
   content: "\e617";
 }
+
 .toutiao-shouye:before {
   content: "\e618";
 }
+
 .toutiao-wenda:before {
   content: "\e619";
 }
+
 .toutiao-shipin:before {
   content: "\e61a";
 }
+
 .toutiao-sousuo:before {
   content: "\e61b";
 }
+
 .toutiao-gengduo:before {
   content: "\e61c";
 }
+
 .toutiao-wuwangluo:before {
   content: "\e61d";
 }
+
 .toutiao-youjiantou:before {
   content: "\e61e";
 }
+
 .toutiao-shoucang:before {
   content: "\e61f";
 }
+
 .toutiao-dianzan:before {
   content: "\e620";
 }
+
 .toutiao-shouji:before {
   content: "\e621";
 }
+
 .toutiao-shanchu:before {
   content: "\e622";
 }
+
 .toutiao-yanzhengma:before {
   content: "\e623";
 }
+
 .toutiao-dianzan2:before {
   content: "\e624";
 }
+
 .toutiao-fenxiang:before {
   content: "\e625";
 }
+
 .toutiao-yuedu:before {
   content: "\e626";
 }
+
 .toutiao-zuopin:before {
   content: "\e627";
-}
-body {
-  background-color: #f5f7f9;
-}
-.app-nav-bar {
-  background-color: #3296fa;
-}
-.app-nav-bar .van-nav-bar__title {
-  color: #fff;
-}
-.app-nav-bar .van-icon {
-  color: #fff;
 }
